--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +48,9 @@
     <Compile Include="Agent.cs" />
     <Compile Include="AgentResults.cs" />
     <Compile Include="Client.cs" />
+    <Compile Include="Company.cs" />
+    <Compile Include="Contact.cs" />
+    <Compile Include="ContactResults.cs" />
     <Compile Include="Credentials.cs" />
     <Compile Include="Listing.cs" />
     <Compile Include="Office.cs" />
@@ -54,6 +58,7 @@
     <Compile Include="ListingResults.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="URIBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
