adding broken code to allow for experiments

--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
@@ -47,6 +47,7 @@
     <Compile Include="AgentIdType.cs" />
     <Compile Include="AgentResults.cs" />
     <Compile Include="BuyerTransaction.cs" />
+    <Compile Include="BuyerTransactionResults.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Company.cs" />
     <Compile Include="Contact.cs" />
