--- a/MoxiWorks/MoxiWorks.Platform.Test/MoxiWorks.Platform.Test.csproj
+++ b/MoxiWorks/MoxiWorks.Platform.Test/MoxiWorks.Platform.Test.csproj
@@ -53,6 +53,7 @@
     <Compile Include="BuyerTransactionFixture.cs" />
     <Compile Include="CredentialsFixture.cs" />
     <Compile Include="ListingResultFixture.cs" />
+    <Compile Include="SellerTransactionFixture.cs" />
     <Compile Include="SessionFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestClient.cs" />
