--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
@@ -56,10 +56,21 @@
     <Compile Include="Contact.cs" />
     <Compile Include="ContactResults.cs" />
     <Compile Include="Credentials.cs" />
+    <Compile Include="EventDeleteResult.cs" />
+    <Compile Include="EmailCampaign.cs" />
+    <Compile Include="EmailCampaignResults.cs" />
+    <Compile Include="Event.cs" />
+    <Compile Include="EventDateList.cs" />
+    <Compile Include="EventResults.cs" />
+    <Compile Include="Group.cs" />
+    <Compile Include="GroupItem.cs" />
+    <Compile Include="GroupResults.cs" />
     <Compile Include="Listing.cs" />
     <Compile Include="Office.cs" />
     <Compile Include="PropertyFeatures.cs" />
     <Compile Include="ListingResults.cs" />
+    <Compile Include="SellerTransaction.cs" />
+    <Compile Include="SellerTransactionResults.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="URIBuilder.cs" />
