--- a/MoxiWorks/MoxiWorks.Platform.Test/app.config
+++ b/MoxiWorks/MoxiWorks.Platform.Test/app.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="MoxiWorksApiHost" value="https://api-qa.moxiworks.com/api" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
