refactoring http client

--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
@@ -70,6 +70,7 @@
     <Compile Include="GroupItem.cs" />
     <Compile Include="GroupResults.cs" />
     <Compile Include="Listing.cs" />
+    <Compile Include="MoxiWorksClient.cs" />
     <Compile Include="Office.cs" />
     <Compile Include="PropertyFeatures.cs" />
     <Compile Include="ListingResults.cs" />
