--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http.Formatting" />
@@ -59,6 +55,7 @@
     <Compile Include="Company.cs" />
     <Compile Include="Contact.cs" />
     <Compile Include="ContactResults.cs" />
+    <Compile Include="ContextClient.cs" />
     <Compile Include="Credentials.cs" />
     <Compile Include="EventDeleteResult.cs" />
     <Compile Include="EmailCampaign.cs" />
@@ -69,6 +66,7 @@
     <Compile Include="Group.cs" />
     <Compile Include="GroupItem.cs" />
     <Compile Include="GroupResults.cs" />
+    <Compile Include="IContextClient.cs" />
     <Compile Include="Listing.cs" />
     <Compile Include="MoxiWorksClient.cs" />
     <Compile Include="Office.cs" />
@@ -78,6 +76,8 @@
     <Compile Include="SellerTransactionResults.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task.cs" />
+    <Compile Include="TaskResponse.cs" />
     <Compile Include="URIBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
