--- a/MoxiWorks/MoxiWorks.Platform.Test/MoxiWorks.Platform.Test.csproj
+++ b/MoxiWorks/MoxiWorks.Platform.Test/MoxiWorks.Platform.Test.csproj
@@ -55,9 +55,12 @@
     <Compile Include="BuyerTransactionFixture.cs" />
     <Compile Include="CredentialsFixture.cs" />
     <Compile Include="ListingResultFixture.cs" />
+    <Compile Include="ResponseFixture.cs" />
     <Compile Include="SellerTransactionFixture.cs" />
     <Compile Include="SessionFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StubContextClient.cs" />
+    <Compile Include="StubDataLoader.cs" />
     <Compile Include="TestClient.cs" />
     <Compile Include="UriBuilderFixture.cs" />
   </ItemGroup>
@@ -75,7 +78,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="BuyerTransactions.json" />
+    <Content Include="TestData\BuyerTransactions.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TestData\Tasks.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
