--- a/MoxiWorks/MoxiWorks.Platform.Test/MoxiWorks.Platform.Test.csproj
+++ b/MoxiWorks/MoxiWorks.Platform.Test/MoxiWorks.Platform.Test.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StubContextClient.cs" />
     <Compile Include="StubDataLoader.cs" />
+    <Compile Include="TaskServiceFixture.cs" />
     <Compile Include="TestClient.cs" />
     <Compile Include="UriBuilderFixture.cs" />
   </ItemGroup>
