Adding Office and Task Service

--- a/MoxiWorks/MoxiWorks.Platform.Test/MoxiWorks.Platform.Test.csproj
+++ b/MoxiWorks/MoxiWorks.Platform.Test/MoxiWorks.Platform.Test.csproj
@@ -82,6 +82,12 @@
     <Content Include="TestData\BuyerTransactions.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="TestData\FailureResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TestData\Task.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="TestData\Tasks.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
