--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http.Formatting" />
@@ -72,9 +68,12 @@
     <Compile Include="GroupResults.cs" />
     <Compile Include="IContextClient.cs" />
     <Compile Include="Listing.cs" />
+    <Compile Include="ListingService.cs" />
     <Compile Include="MoxiWorksClient.cs" />
     <Compile Include="MoxiWorksError.cs" />
     <Compile Include="Office.cs" />
+    <Compile Include="OfficeResults.cs" />
+    <Compile Include="OfficeService.cs" />
     <Compile Include="PropertyFeatures.cs" />
     <Compile Include="ListingResults.cs" />
     <Compile Include="Response.cs" />
