adding Agent Brand

--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
@@ -45,10 +45,13 @@
     <Compile Include="ActionLog.cs" />
     <Compile Include="ActionLogIndexItem.cs" />
     <Compile Include="ActionLogResults.cs" />
+    <Compile Include="ActionLogService.cs" />
     <Compile Include="Agent.cs" />
     <Compile Include="AgentIdType.cs" />
     <Compile Include="AgentResults.cs" />
+    <Compile Include="AgentService.cs" />
     <Compile Include="Brand.cs" />
+    <Compile Include="BrandService.cs" />
     <Compile Include="BuyerTransaction.cs" />
     <Compile Include="BuyerTransactionResults.cs" />
     <Compile Include="Client.cs" />
