--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
@@ -74,9 +74,11 @@
     <Compile Include="Event.cs" />
     <Compile Include="EventDateList.cs" />
     <Compile Include="EventResults.cs" />
+    <Compile Include="EventService.cs" />
     <Compile Include="Group.cs" />
     <Compile Include="GroupItem.cs" />
     <Compile Include="GroupResults.cs" />
+    <Compile Include="GroupService.cs" />
     <Compile Include="IContextClient.cs" />
     <Compile Include="Listing.cs" />
     <Compile Include="ListingService.cs" />
