adding configuration and changing some properties

--- a/MoxiWorks/MoxiWorks.Platform/app.config
+++ b/MoxiWorks/MoxiWorks.Platform/app.config
@@ -1,5 +1,10 @@
-﻿<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<configuration>-->
+﻿<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+    <appSettings>
+        <add key="Identifier" value="5d39ba58-bfc3-11e5-a4e3-d0e1408e8026"/>
+        <add key="Secret" value="a56sthhidTlUsLyp8eFZBQtt"/>
+    </appSettings>
+    
 <!--  <runtime>-->
 <!--    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">-->
 <!--      <dependentAssembly>-->
@@ -8,4 +13,4 @@
 <!--      </dependentAssembly>-->
 <!--    </assemblyBinding>-->
 <!--  </runtime>-->
-<!--</configuration>-->
+</configuration>
