Adding ListingImage and more documentation

--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Interfaces\ISellerTransactionService.cs" />
     <Compile Include="Interfaces\ITaskService.cs" />
     <Compile Include="Listing.cs" />
+    <Compile Include="ListingImage.cs" />
     <Compile Include="ListingService.cs" />
     <Compile Include="Office.cs" />
     <Compile Include="OfficeResults.cs" />
