--- a/MoxiWorks/MoxiWorks.Platform.Test/packages.config
+++ b/MoxiWorks/MoxiWorks.Platform.Test/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bogus" version="15.0.3" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
-  <package id="NUnit" version="3.6.1" targetFramework="net452" />
+  <package id="Bogus" version="15.0.3" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="NUnit" version="3.8.1" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
 </packages>
