--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
@@ -1,124 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4E03D020-4314-4D05-B49B-21922FA8E390}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MoxiWorks.Platform</RootNamespace>
-    <AssemblyName>MoxiWorks.Platform</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\MoxiWorks.Platform.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http.Formatting" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.0" />
+    <PackageReference Include="Wdc.System.Net.Http.Formatting.NetStandard" Version="1.0.7" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ActionLog.cs" />
-    <Compile Include="ActionLogIndexItem.cs" />
-    <Compile Include="ActionLogResults.cs" />
-    <Compile Include="ActionLogService.cs" />
-    <Compile Include="Agent.cs" />
-    <Compile Include="AgentIdType.cs" />
-    <Compile Include="AgentResults.cs" />
-    <Compile Include="AgentService.cs" />
-    <Compile Include="Brand.cs" />
-    <Compile Include="BrandService.cs" />
-    <Compile Include="BuyerTransaction.cs" />
-    <Compile Include="BuyerTransactionResults.cs" />
-    <Compile Include="BuyerTransactionService.cs" />
-    <Compile Include="Client\ContextClient.cs" />
-    <Compile Include="Client\Credentials.cs" />
-    <Compile Include="Client\MoxiWorksClient.cs" />
-    <Compile Include="Client\MoxiWorksError.cs" />
-    <Compile Include="Client\Response.cs" />
-    <Compile Include="Client\Session.cs" />
-    <Compile Include="Client\URIBuilder.cs" />
-    <Compile Include="ContactService.cs" />
-    <Compile Include="Company.cs" />
-    <Compile Include="CompanyService.cs" />
-    <Compile Include="Contact.cs" />
-    <Compile Include="ContactResults.cs" />
-    <Compile Include="EmailCampiagnService.cs" />
-    <Compile Include="EventDeleteResult.cs" />
-    <Compile Include="EmailCampaign.cs" />
-    <Compile Include="EmailCampaignResults.cs" />
-    <Compile Include="Event.cs" />
-    <Compile Include="EventDateList.cs" />
-    <Compile Include="EventResults.cs" />
-    <Compile Include="EventService.cs" />
-    <Compile Include="Group.cs" />
-    <Compile Include="GroupItem.cs" />
-    <Compile Include="GroupResults.cs" />
-    <Compile Include="GroupService.cs" />
-    <Compile Include="Interfaces\IActionLogService.cs" />
-    <Compile Include="Interfaces\IAgentService.cs" />
-    <Compile Include="Interfaces\IBuyerTransactionService.cs" />
-    <Compile Include="Interfaces\ICompanyService.cs" />
-    <Compile Include="Interfaces\IContactService.cs" />
-    <Compile Include="Interfaces\IContextClient.cs" />
-    <Compile Include="Interfaces\IEventService.cs" />
-    <Compile Include="Interfaces\IGroupService.cs" />
-    <Compile Include="Interfaces\IListingService.cs" />
-    <Compile Include="Interfaces\IOfficeService.cs" />
-    <Compile Include="Interfaces\ISellerTransactionService.cs" />
-    <Compile Include="Interfaces\ITaskService.cs" />
-    <Compile Include="Listing.cs" />
-    <Compile Include="ListingImage.cs" />
-    <Compile Include="ListingService.cs" />
-    <Compile Include="Office.cs" />
-    <Compile Include="OfficeResults.cs" />
-    <Compile Include="OfficeService.cs" />
-    <Compile Include="PropertyFeatures.cs" />
-    <Compile Include="ListingResults.cs" />
-    <Compile Include="SellerTransaction.cs" />
-    <Compile Include="SellerTransactionResults.cs" />
-    <Compile Include="SellerTransactionService.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Task.cs" />
-    <Compile Include="TaskResponse.cs" />
-    <Compile Include="TaskService.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
