--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>MoxiWorks.Platform</PackageId>
+    <PackageVersion>1.0.0</PackageVersion>
+    <Authors>Anthony Hatch</Authors>
+    <Description>SDK for accessing the Moxi Works API in a .NET application.</Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <Copyright>Copyright 2017 (c) Moxi Works Corporation. All rights reserved.</Copyright>
+    <PackageTags>sdk moxiworks Moxi</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
