Adding SoldListings PresentationLog services plus some bug fixes

--- a/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
+++ b/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
@@ -37,5 +37,11 @@
     <None Update="TestData\SoldListing.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\PesentationLogs.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\Listings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
