--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.nuspec
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.nuspec
@@ -2,15 +2,15 @@
 <package>
   <metadata>
     <id>MoxiWorks.Platform</id>
-    <version>1.1.2</version>
+    <version>1.2.1</version>
     <title>Moxi Works Platform</title>
     <authors>Anthony Hatch</authors>
     <owners>Moxi Works</owners>
     <projectUrl>https://github.com/moxiworks-platform/moxiworks-dotnet</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>"DK for interaction with the Moxi Works API platform.</description>
-    <releaseNotes>Adding Gallery End Point 2</releaseNotes>
-    <copyright>Copyright 2017</copyright>
+    <description>"SDK for interaction with the Moxi Works API platform.</description>
+    <releaseNotes>Adding PresentationLogs and SoldListings some bug fixes</releaseNotes>
+    <copyright>Copyright 2018</copyright>
     <tags>moxiworks api sdk</tags>
   </metadata>
 </package>
