Adding Teams Listing Task changes

--- a/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
+++ b/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
@@ -43,5 +43,17 @@
     <None Update="TestData\Listings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
+    <None Update="TestData\Task.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\Tasks.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\Team.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\Teams.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+</ItemGroup>
 </Project>
