--- a/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
+++ b/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
@@ -16,6 +16,9 @@
     <ProjectReference Include="..\MoxiWorks.Platform\MoxiWorks.Platform.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="TestData\Agent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="TestData\BuyerTransactions.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -55,5 +58,5 @@
     <None Update="TestData\Teams.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-</ItemGroup>
+  </ItemGroup>
 </Project>
