--- a/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
+++ b/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
@@ -58,5 +58,8 @@
     <None Update="TestData\Teams.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\Contact.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
