--- a/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.nuspec
+++ b/MoxiWorks/MoxiWorks.Platform/MoxiWorks.Platform.nuspec
@@ -2,14 +2,16 @@
 <package>
   <metadata>
     <id>MoxiWorks.Platform</id>
-    <version>1.2.8</version>
+    <version>1.2.10</version>
     <title>Moxi Works Platform</title>
     <authors>Anthony Hatch</authors>
     <owners>Moxi Works</owners>
     <projectUrl>https://github.com/moxiworks-platform/moxiworks-dotnet</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>"SDK for interaction with the Moxi Works API platform.</description>
-    <releaseNotes>Adding non async wrappers and Contact.CategoryNames </releaseNotes>
+    <releaseNotes>Adding Agent Office Created and Deactivated timestamps.
+      Adding Shared Partner Data to Listings.
+    </releaseNotes>
     <copyright>Copyright 2018</copyright>
     <tags>moxiworks api sdk</tags>
   </metadata>
