Extend SharedPartnerData deserialization to allow for unknown structure; Allow DateTime deserialization of custom formats (viz. MM/DD/YYYY and ISO 8601); Fix SoldListings; Sync ListingBase/Listing/SoldListing with online documentation and json returned from api; Sync Office with online documentation and json returned from api; Sync Agent with online documentation and json returned from api;

--- a/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
+++ b/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Bogus" Version="20.0.2" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="RichardSzalay.MockHttp" Version="5.0.0" />
     <!--<PackageReference Include="xunit" Version="2.2.0" />-->
     <!--<PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />-->
@@ -24,6 +24,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="TestData\FailureResponse.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\Listing.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="TestData\Task.json">
