Allow large value in LotSizeSquareFeet field of ListingBase. Based on real-world data.

--- a/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
+++ b/MoxiWorks/MoxiWorks.Test/MoxiWorks.Test.csproj
@@ -26,6 +26,9 @@
     <None Update="TestData\FailureResponse.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="TestData\LargeListings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="TestData\Listing.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
